--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-select": "^1.12.2",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
     "sass-flex-mixin": "^1.0.3",
     "sass-loader": "^6.0.3",
     "webpack": "^2.3.3"
